force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Case__c/agf__ADM_Case__c.object-meta.xml
<CustomObject>
    <label>62 Org Case</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Related Case ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>62 Org Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>