force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Case__c/fields/agf__Account_Id__c.field-meta.xml
<CustomField>
    <fullName>agf__Account_Id__c</fullName>
    <externalId>true</externalId>
    <label>Account ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>