force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Case__c/fields/agf__Account_Link__c.field-meta.xml
<CustomField>
    <fullName>agf__Account_Link__c</fullName>
    <formula>HYPERLINK( &quot;https://org62.my.salesforce.com/&quot; &amp; agf__Account_Id__c , agf__Account_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account</label>
    <type>Text</type>
</CustomField>