force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Case__c/fields/agf__Account_Stage__c.field-meta.xml
<CustomField>
    <fullName>agf__Account_Stage__c</fullName>
    <label>Red Account Stage</label>
    <length>10</length>
    <type>Text</type>
</CustomField>