force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Case__c/fields/agf__Account_Support_SBR_Category__c.field-meta.xml
<CustomField>
    <fullName>agf__Account_Support_SBR_Category__c</fullName>
    <label>Account Support SBR Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>