force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Case__c/fields/agf__Age__c.field-meta.xml
<CustomField>
    <fullName>agf__Age__c</fullName>
    <formula>ROUND(DATETIMEVALUE (TODAY()) - agf__Case_Created_Date__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>