force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Case__c/fields/agf__Case_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>agf__Case_Created_Date__c</fullName>
    <label>Case Created</label>
    <type>DateTime</type>
</CustomField>