force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Case__c/fields/agf__Case_ID_Set__c.field-meta.xml
<CustomField>
    <fullName>agf__Case_ID_Set__c</fullName>
    <label>Case ID Set</label>
    <type>DateTime</type>
</CustomField>