force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Case__c/fields/agf__Case_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>agf__Case_Owner_ID__c</fullName>
    <label>Case Owner ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>