force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Case__c/fields/agf__Case_Owner_Link__c.field-meta.xml
<CustomField>
    <fullName>agf__Case_Owner_Link__c</fullName>
    <formula>HYPERLINK( &quot;https://org62.my.salesforce.com/&quot; &amp; agf__Case_Owner_ID__c , agf__Case_Owner__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner</label>
    <type>Text</type>
</CustomField>