force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Case__c/fields/agf__Date_Time_Closed__c.field-meta.xml
<CustomField>
    <fullName>agf__Date_Time_Closed__c</fullName>
    <label>Date/Time Closed</label>
    <type>DateTime</type>
</CustomField>