force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Case__c/fields/agf__Escalated_Status__c.field-meta.xml
<CustomField>
    <fullName>agf__Escalated_Status__c</fullName>
    <label>Escalated Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>