force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Case__c/fields/agf__FunctionalArea__c.field-meta.xml
<CustomField>
    <fullName>agf__FunctionalArea__c</fullName>
    <label>Functional Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>