force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Case__c/fields/agf__General_Application_Area__c.field-meta.xml
<CustomField>
    <fullName>agf__General_Application_Area__c</fullName>
    <label>General Application Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>