force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Case__c/fields/agf__Geo__c.field-meta.xml
<CustomField>
    <fullName>agf__Geo__c</fullName>
    <label>Geo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>