force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Case__c/fields/agf__New_Feature_Release_Related__c.field-meta.xml
<CustomField>
    <fullName>agf__New_Feature_Release_Related__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Feature or Release Related</label>
    <type>Checkbox</type>
</CustomField>