force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Case__c/fields/agf__Parent_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>agf__Parent_Account_Id__c</fullName>
    <label>Parent Account ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>