force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Case__c/fields/agf__Parent_Account_Link__c.field-meta.xml
<CustomField>
    <fullName>agf__Parent_Account_Link__c</fullName>
    <formula>HYPERLINK( &quot;https://org62.my.salesforce.com/&quot; &amp; agf__Parent_Account_Id__c , agf__Parent_Account_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account</label>
    <type>Text</type>
</CustomField>