force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Case__c/fields/agf__Parent_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>agf__Parent_Account_Name__c</fullName>
    <label>Parent Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>