force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Case__c/fields/agf__Support_Skill_Group__c.field-meta.xml
<CustomField>
    <fullName>agf__Support_Skill_Group__c</fullName>
    <label>Support_Skill_Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>