force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Case__c/fields/agf__Support_Tier_3_Owner__c.field-meta.xml
<CustomField>
    <fullName>agf__Support_Tier_3_Owner__c</fullName>
    <label>Support Tier 3 Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>