force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Case__c/fields/agf__Support_Tier_3_Owner_Link__c.field-meta.xml
<CustomField>
    <fullName>agf__Support_Tier_3_Owner_Link__c</fullName>
    <formula>HYPERLINK( &quot;https://org62.my.salesforce.com/&quot; &amp; agf__Support_Tier_3_Owner__c , agf__Support_Tier_3_Owner_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Support Tier 3 Owner</label>
    <type>Text</type>
</CustomField>